// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`./ProgressBar.stories AlmostComplete 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="w-[300px]"
    >
      <div
        aria-label="Progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="85"
        aria-valuetext="85%"
        class="flex flex-wrap gap-3 progressBar"
        data-progressing=""
        data-slot="progress"
        role="progressbar"
      >
        <div
          class="bg-muted h-1.5 rounded-full relative flex w-full items-center overflow-x-hidden"
          data-progressing=""
          data-slot="progress-track"
        >
          <div
            class="bg-primary h-full transition-all"
            data-progressing=""
            data-slot="progress-indicator"
            style="inset-inline-start: 0; height: inherit; width: 85%;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`./ProgressBar.stories Complete 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="w-[300px]"
    >
      <div
        aria-label="Progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        aria-valuetext="100%"
        class="flex flex-wrap gap-3 progressBar"
        data-complete=""
        data-slot="progress"
        role="progressbar"
      >
        <div
          class="bg-muted h-1.5 rounded-full relative flex w-full items-center overflow-x-hidden"
          data-complete=""
          data-slot="progress-track"
        >
          <div
            class="bg-primary h-full transition-all"
            data-complete=""
            data-slot="progress-indicator"
            style="inset-inline-start: 0; height: inherit; width: 100%;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`./ProgressBar.stories Empty 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="w-[300px]"
    >
      <div
        aria-label="Progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0%"
        class="flex flex-wrap gap-3 progressBar"
        data-progressing=""
        data-slot="progress"
        role="progressbar"
      >
        <div
          class="bg-muted h-1.5 rounded-full relative flex w-full items-center overflow-x-hidden"
          data-progressing=""
          data-slot="progress-track"
        >
          <div
            class="bg-primary h-full transition-all"
            data-progressing=""
            data-slot="progress-indicator"
            style="inset-inline-start: 0; height: inherit; width: 0%;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`./ProgressBar.stories Partial 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="w-[300px]"
    >
      <div
        aria-label="Progress"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="45"
        aria-valuetext="45%"
        class="flex flex-wrap gap-3 progressBar"
        data-progressing=""
        data-slot="progress"
        role="progressbar"
      >
        <div
          class="bg-muted h-1.5 rounded-full relative flex w-full items-center overflow-x-hidden"
          data-progressing=""
          data-slot="progress-track"
        >
          <div
            class="bg-primary h-full transition-all"
            data-progressing=""
            data-slot="progress-indicator"
            style="inset-inline-start: 0; height: inherit; width: 45%;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
